# ffmeg-UI

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  build_output.txt  ci_keys.txt
.cargo/: config.toml
src/: app.rs  export_queue.rs  main.rs
src/ffmpeg/: commands.rs  keyframes.rs  mod.rs  paths.rs  probe.rs  progress.rs  silence.rs  smart_cut.rs  wrapper.rs
src/player/: audio_player.rs  mod.rs  mpv_player.rs  stream_decoder.rs  sync.rs  video_decoder.rs
src/project/: export.rs  media.rs  mod.rs  timeline.rs
src/ui/: export_dialog.rs  file_browser.rs  main_window.rs  mod.rs  preview.rs  timeline.rs  timeline_widget.rs  tools.rs
src/utils/: time.rs
