[package]
name = "ffmpeg_ui"
version = "0.1.0"
edition = "2021"
authors = ["FFmpeg UI Contributors"]
description = "A lightweight video editing UI for FFmpeg"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["process", "rt-multi-thread", "sync", "io-util"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
anyhow = "1.0"

# Utilities
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Audio playback
rodio = "0.19"

[profile.release]
opt-level = 3
lto = true
